# niviz

./: .gitignore  README.md  index.html  niviz_sandbox.ipynb  requirements.txt  setup.cfg  surface_dev.ipynb  usage_tutorial_tests.ipynb
.github/workflows/: build_test_deploy.yml
0.2.0/: .buildinfo  genindex.html  index.html  modules.html  niviz.html  niviz.interfaces.html  niviz.tests.html  py-modindex.html  search.html  searchindex.js
0.2.0/.doctrees/: environment.pickle  index.doctree  modules.doctree  niviz.doctree  niviz.interfaces.doctree  niviz.tests.doctree
0.3.0/: .buildinfo  genindex.html  index.html  modules.html  niviz.html  niviz.interfaces.html  niviz.tests.html  objects.inv  py-modindex.html  search.html
0.3.0/.doctrees/: environment.pickle  index.doctree  modules.doctree  niviz.doctree  niviz.interfaces.doctree  niviz.tests.doctree
0.3.0/_sources/: niviz.interfaces.rst.txt  niviz.rst.txt  niviz.tests.rst.txt
dev/: .buildinfo  genindex.html  index.html  modules.html  niviz.html  niviz.interfaces.html  niviz.tests.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: environment.pickle  index.doctree  modules.doctree  niviz.doctree  niviz.interfaces.doctree  niviz.tests.doctree
docs/: Makefile  index.html
docs/source/: conf.py  (+1 more)
niviz/: __init__.py  config.py  logging.conf  make_svgs.py  node_factory.py  surface.py  view_adapter.py  viewer.py
notebooks/: cross_sectional_viz.ipynb  example_surf_vol_reg.ipynb  surface-map-visualization.ipynb  transparent_epi_over_anat.ipynb
reports/: hcpqc.yml
specs/: hcpqc.yml
(+11 files in other folders)
