[metadata]
name = niviz
description = Flexibly automate QC visualization reports using pre-existing outputs
long_description = file:README.md
keywords = neuroimaging, visualization, automation
classifiers =
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls =
	GitHub = https://github.com/tigrlab/niviz
	Bug TRACKER = https://github.com/tigrlab/niviz/issues
	Source Code = https://github.com/tigrlab/niviz

[options]
python_requires = >= 3.7
install_requires =
	attrs
	packaging
	numpy
	PyYAML
	matplotlib >= 2.2.0
	pybids >= 0.11.0
	niworkflows == 1.3.2
packages = find:
zip_safe = true

[options.extras_require]
# To use "pip install niviz[name]"
doc =
	sphinx >= 3
	sphinx_rtd_theme >= 0.5.0
	sphinx-multiversion
	sphinx-autodoc-typehints
docs =
	%(doc)s
lint =
	flake8 >= 3.7.0
	yapf >= 0.30.0
all =
	%(doc)s
	%(lint)s
